# kannel

./: .gitignore  CHANGELOG.md  ChangeLog  LICENSE  Makefile.am  README  README.md  VERSION  acinclude.m4  configure.ac  configure.in  gw-config  sbom.json  smscsimulator.cpp
.github/workflows/: build-rpm.yml
addons/opensmppbox/: Makefile.am  bootstrap  configure.ac  configure.in  sb-config.h.in
addons/opensmppbox/gw/: opensmppbox.c
addons/rabbitmqbox/: .gitignore  LICENSE  Makefile.am  README.md  TODO.md  configure.ac
addons/rabbitmqbox/example/: allowed-senders.txt.example  rabbitmqbox.conf.example
addons/rabbitmqbox/gw/: Makefile.am  rabbitmqbox.c  rmq_connection.c  rmq_connection.h
addons/sqlbox/: ChangeLog  Makefile.am  bootstrap  configure.ac  configure.in  sb-config.h.in
addons/sqlbox/example/: sqlbox.conf.example
addons/sqlbox/gw/: Makefile.am  sqlbox.c  sqlbox_mssql.c  sqlbox_mssql.h  sqlbox_mysql.c  sqlbox_mysql.h  sqlbox_oracle.c  sqlbox_oracle.h  sqlbox_pgsql.c  sqlbox_pgsql.h  sqlbox_sdb.c  sqlbox_sdb.h  sqlbox_sql.c  sqlbox_sql.h  sqlbox_sqlite.c  sqlbox_sqlite.h  sqlbox_sqlite3.c  sqlbox_sqlite3.h
benchmarks/: bench_http.sh  bench_http.txt  bench_sms.conf  bench_sms.sh  bench_sms.txt  functions.inc  plot.py  report-begin.txt  run-benchmarks
checks/: Makefile.am  check_date.c  check_fakesmsc.sh  check_headers.sh  check_http.sh  check_httpsmsc_kannel.sh  check_json.c  check_sendsms.sh  check_smpp.sh
contrib/: admin-panel.html
contrib/kannel-monitor/: config.php  index.php  xmlfunc.php  xmltoarray.php
contrib/systemd/: README.md  kamex-bearerbox.service  kamex-bearerbox.service.in  kamex-opensmppbox.service.in  kamex-smsbox.service  kamex-smsbox.service.in  kamex-sqlbox.service.in  kamex-status.sh  kamex.logrotate  kannel-bearerbox.service  kannel-smsbox.service  kannel-status.sh  kannel.logrotate  setup-kamex-user.sh  setup-kannel-user.sh
doc/: CodingStyle  README.md  addons.md  cli.md  configuration.md  dlr.md  docker.md  logging.md  metrics.md  openapi.yaml  sms-gateway.md  smsc-types.md
doc/doxygen/: kannel.conf
doc/examples/: dlr-redis.conf  kannel.conf  store-redis.conf
doc/userguide/: userguide.html  userguide.xml
docker/: Dockerfile  Dockerfile.alpine  docker-compose.yml
gw/: Makefile.am  admin_panel.h  bb.h  bb_boxc.c  bb_http.c  bb_smscconn.c  bb_store_redis.c  bearerbox.c  bearerbox.h  cert.pem  dlr.c  dlr_p.h  dlr_redis.c  dlr_spool.c  key.pem  meta_data.c  meta_data.h  msg-decl.h  shared.c  smsbox.c  smscconn.c  smscconn_p.h  smskannel.conf  urltrans.c  urltrans.h
gw/smsc/: smasi_pdu.h  smpp_pdu.h  smsc_cimd.c  smsc_emi.c  smsc_fake.c  smsc_http.c  smsc_http_p.h  smsc_smpp.c
gw/smsc/http/: generic.c
gwlib/: Makefile.am  cfg.c  cfg.def  charset.c  charset.h  conn.c  dbpool.c  dbpool.h  dbpool_cass.c  dbpool_mssql.c  dbpool_pgsql.c  dbpool_redis.c  gw-timer.c  gw-timer.h  gw_uuid.c  gwlib.h  gwpoll.h  gwthread-pthread.c  gwthread.h  http.c  http.h  json.c  json.h  log.c  log.h  md5.c  octstr.c  octstr.h  pki.c  protected.c  socket.c  utils.c
rpm/: kamex-opensmppbox.spec  kamex-sqlbox.spec  kamex.spec
test/: Makefile.am  drive_smpp.c  fakesmsc.c  test_dbpool.c  test_hash.c  test_headers.c  test_hmac.c  test_smsc.c  test_timerset.c
utils/: Makefile.am  generate_admin_panel_h.py  mtbatch.c  run-checks  run_kannel_box.8  seewbmp
